# Copyright 2026 Canonical Ltd.
# See LICENSE file for licensing details.

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "charmbuild"
version = "0.1.0"
description = "Thin wrapper that ensures charmcraft is installed and invokes it"
requires-python = ">=3.8"
dependencies = ["pyyaml"]

[tool.setuptools.package-dir]
charmbuild = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.scripts]
charmbuild = "charmbuild.main:main"
